Bug 113328 - EDITING Closing Colour replacer crashes the application
Summary: EDITING Closing Colour replacer crashes the application
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
5.4.0.0.alpha0+
Hardware: All All
: highest critical
Assignee: Caolán McNamara
URL:
Whiteboard: target:6.0.0 target:5.4.4
Keywords: bibisected, bisected, haveBacktrace, regression
Depends on:
Blocks:
 
Reported: 2017-10-21 17:54 UTC by Emil Tanev
Modified: 2017-10-25 19:51 UTC (History)
5 users (show)

See Also:
Crash report or crash signature: ["Control::SetText(rtl::OUString const &)"]


Attachments
gdb backtrace (27.58 KB, text/plain)
2017-10-22 20:58 UTC, Xisco Faulí
Details
bt with debug symbols (7.81 KB, text/plain)
2017-10-23 22:12 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Emil Tanev 2017-10-21 17:54:11 UTC
Open Impress
Open Tools > Colour Replacer
Open a Colour picker from the Custom option of any of the colour options
Close the Colour Replacer window from the X button
Choose a colour in the color picker
Click OK

Issue: App crashes

https://www.screencast.com/t/7v9j56LN
Comment 1 Regina Henschel 2017-10-22 11:38:51 UTC
Reproduced in Draw with Version: 6.0.0.0.alpha0+
Build ID: a4a182e24d2e3e954831a0a7c70a7299f28950cb
CPU threads: 4; OS: Windows 6.1; UI render: default; 
TinderBox: Win-x86@42, Branch:master, Time: 2017-10-18_04:47:29
Locale: de-DE (de_DE); Calc: group
Comment 2 Xisco Faulí 2017-10-22 20:24:35 UTC
Regression introduced by:

author	Noel Grandin <noel.grandin@collabora.co.uk>	2017-01-11 07:48:18 (GMT)
committer	Noel Grandin <noel.grandin@collabora.co.uk>	2017-01-13 06:49:23 (GMT)
commit e8b49f09074fe184374bee5062715357427ae044 (patch)
tree b9cf1f5e3d7ab8b98345a512b6ddb0da42fe2919
parent 5e0e27e758e6f7fa325f36e6e51540e10bab0fdc (diff)
new loplugin: useuniqueptr: vcl

Bisected with:

Adding Cc: to Noel Grandin

NOTE: I used SAL_USE_VCLPLUGIN=gen to reproduce it on Linux
Comment 3 Xisco Faulí 2017-10-22 20:25:02 UTC
Bisected with: bibisect-linux-64-5.4
Comment 4 Xisco Faulí 2017-10-22 20:58:24 UTC
Created attachment 137213 [details]
gdb backtrace
Comment 5 Julien Nabet 2017-10-23 22:12:50 UTC
Created attachment 137244 [details]
bt with debug symbols

On pc Debian x86-64 with master sources updated today I couldn't reproduce this with "gtk3" but could with "gtk", "kde4" and "gen" renderings.

With gtk3, I couldn't close the parent "color replacer" window.

Perhaps the parent window shouldn't be closeable for other renderings?
Comment 6 Julien Nabet 2017-10-23 22:20:40 UTC
Caolán: thought you might be interested in this one since this bugtracker can be reproduced with any rendering (I could also test on MacOs and it crashed) except gtk3.
Comment 7 Commit Notification 2017-10-25 14:44:55 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=0ce75cde0a0bdf4b3c23044e713f906a765e8a8a

Resolves: tdf#113328 crash in color replacer if parent closed before it

It will be available in 6.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Caolán McNamara 2017-10-25 14:45:29 UTC
backport to 5-4 in gerrit
Comment 9 Commit Notification 2017-10-25 19:51:33 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-5-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=d9525910e183c75f6d76b3be7d6b369da322feac&h=libreoffice-5-4

Resolves: tdf#113328 crash in color replacer if parent closed before it

It will be available in 5.4.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.