Resolves: tdf#113328 crash in color replacer if parent closed before it

Change-Id: I41a7af332cd36c9645b6042785c4d72f70e67795